--- a/index-2-one-page.html
+++ b/index-2-one-page.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from pixydrops.com/boskery-html/index-2-one-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 13 Jun 2024 17:02:33 GMT -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Two || Boskery || HTML Template For Butcher & Meat</title>
+    <title>Ets Milka</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
