--- a/index.html
+++ b/index.html
@@ -65,12 +65,11 @@
                                     <ul class="list-unstyled topbar__info">
                                         <li>
                                             <i class="icon-paper-plane"></i>
-                                            <a href="mailto:needhelp@company.com">needhelp@company.com</a>
+                                            <a href="mailto:needhelp@company.com">milkaenterprises@gmail.com</a>
                                         </li>
                                         <li>
                                             <i class="icon-maps-and-flags"></i>
-                                            <a href="https://maps.app.goo.gl/RU419bHcAWhNFQqb8">85 Ketch Harbour Road Bensalem,
-                                                PA 19020</a>
+                                            <a href="https://maps.app.goo.gl/RU419bHcAWhNFQqb8">48 Av Munongo Ex Kasai, L'shi DRC</a>
                                         </li>
                                     </ul><!-- /.list-unstyled topbar__info -->
                                     <div class="topbar__right">
