--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     <ul class="list-unstyled topbar__info">
                                         <li>
                                             <i class="icon-paper-plane"></i>
-                                            <a href="mailto:needhelp@company.com">milkaenterprises@gmail.com</a>
+                                            <a href="mailto:needhelp@company.com">milkaenterprise@gmail.com</a>
                                         </li>
                                         <li>
                                             <i class="icon-maps-and-flags"></i>
@@ -2648,11 +2648,12 @@
                 <h4 class="sidebar-one__title">Contact</h4>
                 <ul class="sidebar-one__info__list">
                     <li><span class="icon-maps-and-flags"></span>
-                        <address>85 Ketch Harbour Road
-                            Bensal PA 19020</address>
+                        <address>48 Av Munongo Ex Kasai, 
+                            Lubumbashi
+                            Democratic republic of Congo</address>
                     </li>
-                    <li><span class="icon-paper-plane"></span> <a href="mailto:needhelp@company.com">needhelp@company.com</a></li>
-                    <li><span class="icon-phone-call"></span> <a href="tel:+9156980036420">+91 5698 0036 420</a></li>
+                    <li><span class="icon-paper-plane"></span> <a href="mailto:milkaenterprise@gmail.com">milkaenterprise@gmail.com</a></li>
+                    <li><span class="icon-phone-call"></span> <a href="tel:+243814990361">+243 81 499 0361</a></li>
                 </ul><!-- /.sidebar-one__info__list -->
             </div><!-- /.sidebar-one__info -->
             <div class="sidebar-one__social sidebar-one__item">
