--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from pixydrops.com/boskery-html/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 13 Jun 2024 17:02:00 GMT -->
+<!-- Mirrored from pixydrops.com/boskery-html/index-one-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 13 Jun 2024 16:59:08 GMT -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -65,11 +65,12 @@
                                     <ul class="list-unstyled topbar__info">
                                         <li>
                                             <i class="icon-paper-plane"></i>
-                                            <a href="mailto:needhelp@company.com">milkaenterprise@gmail.com</a>
+                                            <a href="mailto:needhelp@company.com">needhelp@company.com</a>
                                         </li>
                                         <li>
                                             <i class="icon-maps-and-flags"></i>
-                                            <a href="https://maps.app.goo.gl/RU419bHcAWhNFQqb8">48 Av Munongo Ex Kasai, L'shi DRC</a>
+                                            <a href="https://maps.app.goo.gl/RU419bHcAWhNFQqb8">85 Ketch Harbour Road Bensalem,
+                                                PA 19020</a>
                                         </li>
                                     </ul><!-- /.list-unstyled topbar__info -->
                                     <div class="topbar__right">
@@ -103,10 +104,9 @@
                         <div class="main-header__right__inner">
                             <div class="main-header__right__left">
                                 <nav class="main-header__nav main-menu">
-                                    <ul class="main-menu__list">
-
-                                        <li class="dropdown megamenu">
-                                            <a href="index.html">Home</a>
+                                    <ul class="main-menu__list one-page-scroll-menu">
+                                        <li class="dropdown megamenu scrollToLink current">
+                                            <a href="#home">Home</a>
                                             <ul>
                                                 <li>
                                                     <section class="home-showcase">
@@ -240,99 +240,13 @@
                                                 </li>
                                             </ul>
                                         </li>
-
-
-                                        <li>
-                                            <a href="about.html">About Us</a>
-                                        </li>
-                                        <li class="dropdown">
-                                            <a href="#">Services</a>
-                                            <ul>
-                                                <li><a href="services.html">Services</a></li>
-                                                <li><a href="services-carousel.html">Services Carousel</a></li>
-                                                <li><a href="service-d-custom-cutting.html">Custom Cutting</a></li>
-                                                <li><a href="service-d-meat-preparation.html">Meat Preparation</a></li>
-                                                <li><a href="service-d-meat-packaging.html">Meat Packaging</a></li>
-                                                <li><a href="service-d-online-ordering.html">Online Ordering</a></li>
-                                                <li><a href="service-d-beef-tenderloin.html">Beef Tenderloin</a></li>
-                                                <li><a href="service-d-specialty-product.html">Specialty Product</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown">
-                                            <a href="#">Pages</a>
-                                            <ul>
-                                                <li><a href="team.html">Our Team</a></li>
-                                                <li><a href="team-carousel.html">Team Carousel</a></li>
-                                                <li><a href="team-details.html">Team Details</a></li>
-                                                <li><a href="pricing.html">pricing</a></li>
-                                                <li><a href="testimonials-carousel.html">Testimonials Carousel 01</a></li>
-                                                <li><a href="testimonials-carousel-2.html">Testimonials Carousel 02</a></li>
-                                                <li>
-                                                    <a href="gallery.html">Gallery</a>
-                                                    <ul>
-                                                        <li><a href="gallery.html">Gallery masonry</a></li>
-                                                        <li><a href="gallery-filter.html">Gallery filter</a></li>
-                                                        <li><a href="gallery-grid.html">Gallery Grid</a></li>
-                                                        <li><a href="gallery-carousel.html">Gallery Carousel</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="faq.html">FAQS</a></li>
-                                                <li><a href="login.html">Login</a></li>
-                                                <li><a href="404.html">404 Error</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown">
-                                            <a href="#">Shop</a>
-                                            <ul class="sub-menu">
-                                                <li class="dropdown">
-                                                    <a href="#">Products</a>
-                                                    <ul class="sub-menu">
-                                                        <li><a href="shop.html">No sidebar</a></li>
-                                                        <li><a href="shop-left.html">Left sidebar</a></li>
-                                                        <li><a href="shop-right.html">Right sidebar</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="shop-carousel.html">Products carousel</a></li>
-                                                <li><a href="shop-details.html">Product details</a></li>
-                                                <li><a href="cart.html">Cart</a></li>
-                                                <li><a href="checkout.html">Checkout</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown">
-                                            <a href="#">News</a>
-                                            <ul class="sub-menu">
-                                                <li class="dropdown">
-                                                    <a href="#">News grid</a>
-                                                    <ul class="sub-menu">
-                                                        <li><a href="blog-grid.html">No sidebar</a></li>
-                                                        <li><a href="blog-grid-left.html">Left sidebar</a></li>
-                                                        <li><a href="blog-grid-right.html">Right sidebar</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li class="dropdown">
-                                                    <a href="#">News list</a>
-                                                    <ul class="sub-menu">
-                                                        <li><a href="blog-list.html">No sidebar</a></li>
-                                                        <li><a href="blog-list-left.html">Left sidebar</a></li>
-                                                        <li><a href="blog-list-right.html">Right sidebar</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="blog-carousel.html">News carousel 01</a></li>
-                                                <li><a href="blog-carousel-2.html">News carousel 02</a></li>
-                                                <li><a href="blog-carousel-3.html">News carousel 03</a></li>
-                                                <li class="dropdown">
-                                                    <a href="#">News details</a>
-                                                    <ul class="sub-menu">
-                                                        <li><a href="blog-details.html">No sidebar</a></li>
-                                                        <li><a href="blog-details-left.html">Left sidebar</a></li>
-                                                        <li><a href="blog-details-right.html">Right sidebar</a></li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="contact.html">Contact Us</a>
-                                        </li>
+                                        <li class="scrollToLink"><a href="#about">About Us</a></li>
+                                        <li class="scrollToLink"><a href="#pricing">Pricing</a></li>
+                                        <li class="scrollToLink"><a href="#shop">Shop</a></li>
+                                        <li class="scrollToLink"><a href="#why-choose">Why Choose</a></li>
+                                        <li class="scrollToLink"><a href="#testimonials">Testimonials</a></li>
+                                        <li class="scrollToLink"><a href="#team">Team</a></li>
+                                        <li class="scrollToLink"><a href="#news">News</a></li>
                                     </ul>
                                 </nav><!-- /.main-header__nav -->
                             </div><!-- /.main-header__right__left -->
@@ -1959,7 +1873,7 @@
             </div><!-- /.container -->
         </section><!-- /.why-choose-one section-space-two -->
 
-        <section class="testimonials-one section-space-two">
+        <section class="testimonials-one section-space-two" id="testimonials">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 col-md-9">
@@ -2648,12 +2562,11 @@
                 <h4 class="sidebar-one__title">Contact</h4>
                 <ul class="sidebar-one__info__list">
                     <li><span class="icon-maps-and-flags"></span>
-                        <address>48 Av Munongo Ex Kasai, 
-                            Lubumbashi
-                            Democratic republic of Congo</address>
+                        <address>85 Ketch Harbour Road
+                            Bensal PA 19020</address>
                     </li>
-                    <li><span class="icon-paper-plane"></span> <a href="mailto:milkaenterprise@gmail.com">milkaenterprise@gmail.com</a></li>
-                    <li><span class="icon-phone-call"></span> <a href="tel:+243814990361">+243 81 499 0361</a></li>
+                    <li><span class="icon-paper-plane"></span> <a href="mailto:needhelp@company.com">needhelp@company.com</a></li>
+                    <li><span class="icon-phone-call"></span> <a href="tel:+9156980036420">+91 5698 0036 420</a></li>
                 </ul><!-- /.sidebar-one__info__list -->
             </div><!-- /.sidebar-one__info -->
             <div class="sidebar-one__social sidebar-one__item">
@@ -2716,5 +2629,5 @@
 </body>
 
 
-<!-- Mirrored from pixydrops.com/boskery-html/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 13 Jun 2024 17:02:13 GMT -->
+<!-- Mirrored from pixydrops.com/boskery-html/index-one-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 13 Jun 2024 17:01:42 GMT -->
 </html>
